--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,10 @@
     "date-fns": "^1.29.0",
     "immer": "^1.7.4",
     "lodash": "^4.17.11",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
-    "react-redux": "^5.1.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-quill": "^1.3.2",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
